test/parse/module/bad-memory-init-size.txt
;;; ERROR: 1
(module (memory foo))
(;; STDERR ;;;
parse/module/bad-memory-init-size.txt:2:17: unexpected token "foo"
(module (memory foo))
                ^^^
parse/module/bad-memory-init-size.txt:2:20: syntax error, unexpected ), expecting INT
(module (memory foo))
                   ^
;;; STDERR ;;)
